2011-01-27  Michael Wiegand <michael.wiegand@greenbone.net>

	* tools/greenbone-nvt-sync: Check whether the access key has a size
	greater than zero instead of just testing for existence during self
	test.

2011-01-27  Michael Wiegand <michael.wiegand@greenbone.net>

	* tools/greenbone-nvt-sync: Check whether credentials were read
	correctly before attempting to synchronize.

2011-01-25  Michael Wiegand <michael.wiegand@greenbone.net>

	* tools/greenbone-nvt-sync: Removed superfluous check for
	openvassd.conf.

2011-01-24  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/openvassd.c (main): Unhide "--cfg-specs" from --help and
	provide a short description.

2011-01-20  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Post-release version bump.

	* CMakeLists.txt: Set to 3.2+rc3.

2011-01-20  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Preparing the openvas-scanner 3.2+rc2 release.

	* CMakeLists.txt: Added some files to ignore for CPack.

	* CHANGES: Updated.

2011-01-20  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* doc/HTTP_authentication.txt: Removed. There is no
	new or helpful information in there.
 
	* src/COPYING: Removed. Since we maintain a explicit
	list in COPYING, we don't need that file anymore.

2011-01-20  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* tools/openvas-mkcert.in: Added switch "-f" to
	force overwriting existing certificates.
	Added a stop-mechanism with respective note
	in case the certificate files already exist.

	* doc/openvas-mkcert.8: Added info about "-f" switch.

2011-01-20  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* tools/openvas-mkcert.in: Removed test of openvassd as it is
	not necessary anymore. Remove client part as it is completly
	commented out anyway.

	* doc/openvas-mkcert.8: Updated.

2011-01-20  Michael Wiegand <michael.wiegand@greenbone.net>

	* tools/openvas-mkcert.in: Remove handling of openvassd.conf from