@@ -1,3 +1,8 @@
+2011-01-28  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
+
+	* tools/openvas-adduser.in: Removed checking code for openvassd
+	config as it is handled differently now.
+
 2011-01-27  Michael Wiegand <michael.wiegand@greenbone.net>
 
 	* tools/greenbone-nvt-sync: Check whether the access key has a size
